# dmforge_v2

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  snapshot.txt
docs/: 00_context.md  01_roadmap.md  02_contracts.md  03_architecture.md  04_dev_lifecycle.md  05_usage.md  decision_log.md
docs/planning/: 00_index.md  decision_log.md  feature_DEV_SUPPORT_AUTOMATION.md  personas_and_user_stories.md  project_lifecycle.md  project_lifecycle_policy.md  reqs  requirements_tracability_matrix.md  risk_log.md  roadmap_versions.md  test_strategy.md
docs/planning/lifecycle_versions/: lifecycle_v1.0_2025-05-24.md
docs/planning/roadmap_snapshots/: roadmap_phase_X0_2025-05-24..md
docs/planning/roadmap_versions/: roadmap_phase_1.0_2025-05-24.md
docs/system/: gpt_system_prompt.md
docs/system/system_prompt_versions/: system_prompt_v1.0_2025-05-24.md
scripts/: check_templates.py  dumb_source_split.py  end_dev.py  generate_cli_guide.py  snapshot_split.py  update_docs.py  validate_docs.py  validate_env.py  validate_templates.py  version_docs.py
snapshots/: snapshot_part_1.md  snapshot_part_2.md  snapshot_part_3.md  snapshot_part_4.md  source_manifest.md
snapshots/sources/: source_chunk_1.md  source_chunk_2.md  source_chunk_3.md  source_chunk_4.md  source_chunk_5.md  source_chunk_6.md  source_chunk_7.md
src/dmforge/application/: deck_builder.py
tests/application/: test_deck_builder.py
tests/domain/: test_models.py
tests/scripts/: test_generate_cli_guide.py  test_update_docs.py  test_validate_docs.py  test_version_docs.py
(+17 files in other folders)
