[tool.poetry]
name = "dmforge"
version = "0.1.0"
description = "Clean architecture D&D card generator"
authors = ["Your Name <you@example.com>"]
packages = [{ include = "dmforge", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.3"
jinja2 = "^3.1.3"
weasyprint = "==60.1"
pydyf = "==0.10.0"
openai = "^1.30.1"
pydantic = "^2.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
ruff = "^0.4.3"
black = "^24.4.2"
types-requests = "^2.31.0.20240406"
types-PyYAML = "^6.0.12.20240311"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--strict-markers --tb=short"
testpaths = ["tests"]